<resources>
    <string name="app_name">SaveableTimers</string>
    <string name="navigate_create_timer">Create Timer</string>
    <string name="navigate_saved_timers">Saved Timers</string>
    <string name="create_timer">Create</string>
    <string name="cancel_create_timer">cancel</string>
    <string name="go_to_active_timers">Active Timers</string>
    <string name="timer_name_field_label">Name</string>
    <string name="timer_name_hint">Description</string>
    <string name="timer_duration_entry_hint">Duration (m)</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="pick_file_for_timer">Select New Sound File</string>
    <string name="use_default_file_for_timer">Use Default Sound File</string>
    <string name="reuse_previous_sound_file">Select Previous Sound File</string>
    <string name="ring_time">Ring Time</string>
    <string name="deactivate">D</string>
    <string name="activate_timer">A</string>
    <string name="edit_timer">E</string>
    <string name="delete_timer">D</string>
    <string name="description">Description</string>
    <string name="japanese_language" translatable="false">日本語</string>
</resources>