<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:justifyContent="space_between">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggle_active_button"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/activate_timer"
        app:layout_flexGrow="0.1"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_flexGrow="0.75">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_name_field_label"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        app:layout_flexGrow="1"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_duration_entry_hint"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/duration_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:minWidth="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        app:layout_flexGrow="1"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:scrollHorizontally="true"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_button"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/edit_timer"
        app:layout_flexGrow="0.1"
        android:layout_marginStart="5dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/delete_timer"
        app:layout_flexGrow="0.1"
        android:layout_marginStart="5dp"/>

</com.google.android.flexbox.FlexboxLayout>