<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:justifyContent="space_between">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_flexGrow="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_name_field_label"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        app:layout_flexGrow="1"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        app:layout_flexGrow="1"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring_time"
            android:textFontWeight="8"
            />
        <TextView
            android:id="@+id/ring_time_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/deactivate_button"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/deactivate"
        app:layout_flexGrow="0.1"
        android:layout_marginStart="5dp"/>

</com.google.android.flexbox.FlexboxLayout>